fix spacing for 320 px on grading periods and schemes
closes EVAL-1044
flag = none

test plan:
- go to the account settings for your account
- click on Grading
- grading periods
  - click the grading periods tab
  - ensure the terms dropdown, search, and add button are
      properly spaced
  - set the screen to responsive and change its width to 320
  - ensure the terms dropdown, search, and add button are
      on their own lines
- grading schemes
  - click on the grading schemes tab
  - create a grading scheme with at least two 4 digit
      values (ex: 92.23%)
  - full screen size
    - ensure the add button has proper padding
    - grading scheme add form
      - click the add button to show the add form
      - ensure the Range title lines up with the higher
          range value
      - ensure the X button is hugging the right side of
          the container
    - grading scheme view
      - scroll down to to an existing grading scheme (create
          on if you need to)
      - ensure the Range title lines up with the higher
          range value
  - small screen size
    - set the screen to responsive and change its width to 320
    - ensure the add button has proper padding
    - gradings scheme add form
      - the 4 digit values will make the text outside the
          text boxes line upoddly.  this is not in the scope
          of this ticket.
      - ensure the name title lines up with the text input
          for the name
      - ensure the range title lines up with the higher
          range percentage
    - grading scheme view
      - ensure the name title lines up with the name
      - ensure the range title lines up with the higher
          range percentage
      - ensure the four digit values are displayed correctly

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/245706
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Kai Bjorkman <kbjorkman@instructure.com>
Product-Review: Syed Hussain <shussain@instru

--- a/app/stylesheets/components/_ic-forms.scss
+++ b/app/stylesheets/components/_ic-forms.scss
@@ -973,7 +973,9 @@ form.ic-Form-group { margin: 0; }
 
 .ic-Form-action-box__Actions {
   box-sizing: border-box;
-  padding-#{direction(left)}: $ic-sp*4;
+  @include breakpoint(desktop) {
+    padding-#{direction(left)}: $ic-sp*4;
+  }
 }
 
 .ic-Form-help-text {
